Lenovo Yoga Slim 7 Gen 8 14APU8 with AMD Ryzen 7 7840S immediately wakes up from suspend.
Brief summary of the problem:
Trying to suspend the system, it immediately wakes up again. This happens all the time, no exceptions, always same behavior. Did already try to block GPIO 8 with kernel parameters, disabled the EC wakeup, disabled all devices in /proc/acpi/wakeup, disabled /sys/bus/i2c/devices/i2c-IDEA5002:00/power/wakeup and /sys/bus/i2c/devices/i2c-SYNA2BA6:00/power/wakeup. Nothing helped so far.
Hardware description:
- amd_s2idle report: s2idle_report-2023-08-26.txt
System information:
- Arch Linux running with latest rc kernel - 6.5.0-rc7, but also happens on Linux Arch kernel 6.4.12-arch1-1
- Kernel version: Linux archlinux 6.5.0-rc7-1-git-00185-g28f20a19294d #1 (closed) SMP PREEMPT_DYNAMIC Sat, 26 Aug 2023 19:05:32 +0000 x86_64 GNU/Linux
How to reproduce the issue:
- Close the lid, systems wakes up immediately, screen goes on while lid is closed.
- Push the power button, screen goes black and after 1 second lock screen is shown again
- Debugging with pm-suspend, system goes into suspend but comes back immediately.