drivers/pinctrl/pinctrl-amd.h
@@ -80,6 +80,11 @@ struct amd_pingroup {
 	unsigned npins;
 };
 
+#define WAKE_SOURCE	(BIT(WAKE_CNTRL_OFF_S0I3) | \
+			 BIT(WAKE_CNTRL_OFF_S3)   | \
+			 BIT(WAKE_CNTRL_OFF_S4)   | \
+			 BIT(WAKECNTRL_Z_OFF))
+
 struct amd_function {
 	const char *name;
 	const char * const *groups;
